<resources>
    <string name="app_name">Good habits</string>
    <string name="quiz_name">Quiz</string>
    <string name="my_habits_name">My Habits</string>
    <string name="sec_name">Sec</string>
    <string name="action_settings">Settings</string>

    <string name="motivational_text">Having a healthy habit to practice every day is not easy. Routine, fatigue or lack of time prevents us
from engaging in activities that are good for our physical and mental health. Step by step, you can improve your life, by making little changes&#8230;Start now! Enjoy this wonderful day! :)</string>

    <string name="quiz_label">Personal Data</string>
    <string name="quiz_hint_age">Age</string>
    <string name="quiz_hint_height">Height (cm)</string>
    <string name="quiz_hint_weight">Weight (cm)</string>

    <string name="write_habit">write your healthy habit</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
</resources>
