<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_good_habits_10"
    android:fitsSystemWindows="true"
    tools:context="com.example.arthur.goodhabits.MyHabitActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myhabit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <CalendarView
        android:id="@+id/myhabit_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/myhabit_toolbar"/>

    <RelativeLayout
        android:id="@+id/myhabit_habit_view_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_below="@id/myhabit_toolbar"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/myhabit_healthy_habit_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/myhabit_healthy_habit_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/write_habit"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/myhabit_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/myhabit_healthy_habit_container"
            android:text="@string/add" />

        <ListView
            android:id="@+id/myhabit_habit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/myhabit_add_button"
            android:layout_above="@+id/myhabit_done_button"
            android:layout_marginTop="20dp"
            android:text="" />

        <Button
            android:id="@id/myhabit_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:text="@string/done" />

    </RelativeLayout>

</RelativeLayout>